--- a/x86-64+.config
+++ b/x86-64+.config
@@ -261,6 +261,6 @@ CONFIG_boost-static-and-shared-libs=y
 CONFIG_boost-variant-release=y
 
 # r8125
-CONFIG_DEFAULT_kmod-r8125=y
-CONFIG_FEED_rtl8125=y
-CONFIG_PACKAGE_kmod-r8125=y
+#CONFIG_DEFAULT_kmod-r8125=y
+#CONFIG_FEED_rtl8125=y
+#CONFIG_PACKAGE_kmod-r8125=y
