--- a/.github/workflows/istoreOS.yml
+++ b/.github/workflows/istoreOS.yml
@@ -33,7 +33,7 @@ on:
 
 env:
   REPO_URL: https://github.com/istoreos/istoreos
-  #REPO_BRANCH: master
+  REPO_BRANCH: master
   FEEDS_CONF: feeds.conf
   CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
