--- a/x86-64+.config
+++ b/x86-64+.config
@@ -270,3 +270,5 @@ CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
 # CONFIG_ZEROTIER_ENABLE_DEBUG is not set
 # CONFIG_ZEROTIER_ENABLE_SELFTEST is not set
+
+CONFIG_PACKAGE_ttyd=y
