--- a/x86-64+.config
+++ b/x86-64+.config
@@ -271,4 +271,11 @@ CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
 # CONFIG_ZEROTIER_ENABLE_DEBUG is not set
 # CONFIG_ZEROTIER_ENABLE_SELFTEST is not set
 
+CONFIG_DEFAULT_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_ttyd=y
+
+CONFIG_DEFAULT_luci-app-diskman=y
+CONFIG_PACKAGE_luci-app-diskman=y
+CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
