--- a/x86-64+.config
+++ b/x86-64+.config
@@ -279,3 +279,6 @@ CONFIG_PACKAGE_ttyd=y
 CONFIG_DEFAULT_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
+
+CONFIG_PACKAGE_luci-app-netspeedtest=y
+CONFIG_PACKAGE_luci-i18n-netspeedtest-zh-cn=y
